Issue #22821: Fixed fcntl() with integer argument on 64-bit big-endian platforms.